# functions-from-zero

./: Dockerfile  Makefile  README.md  Untitled3.ipynb  fire-cli.py  hello.py  invoke.sh  main.py  myStatements.py  pyproject.toml  requirements.txt  test_hello.py  test_wikibot.py  wikibot.py
MlopsArchi/: bot.py
test/: test_wikibot.py
